# packages/api-client/generated/openapi.json
@@ -4906,6 +4906,54 @@
         ]
       }
     },
+    "/api/v1/notifications/{message_id}/retry": {
+      "post": {
+        "operationId": "retry_notification_api_v1_notifications__message_id__retry_post",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "message_id",
+            "required": true,
+            "schema": {
+              "format": "uuid",
+              "title": "Message Id",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/NotificationMessageRead"
+                }
+              }
+            },
+            "description": "Successful Response"
+          },
+          "422": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            },
+            "description": "Validation Error"
+          }
+        },
+        "security": [
+          {
+            "OAuth2PasswordBearer": []
+          }
+        ],
+        "summary": "Retry Notification",
+        "tags": [
+          "notifications"
+        ]
+      }
+    },
     "/api/v1/patients": {
       "get": {
         "operationId": "search_patients_api_v1_patients_get",
